# OsuTunes

./: README.md  index.html  package-lock.json  package.json  splashscreen.html  vite.config.js
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  models.rs
src-tauri/src/osu/: extractors.rs  mod.rs
src-tauri/src/osu/commands/: beatmap.rs  beatpack.rs  login.rs  mod.rs  skin.rs  spotify.rs
src/components/beatmaps/: beatmapEventHandlers.js  beatmapsRender.js
src/components/beatmaps/beatmapCard/: beatmapCard.js  beatmapCardEventHandler.js
src/components/beatmaps/sortingBar/: sortingBar.js  sortingBarEventHandler.js
src/components/beatmaps/spotify/: spotify.js  spotifyEventHandler.js
src/components/beatpacks/: beatpackEventHandler.js  beatpackRender.js
src/components/beatpacks/typeBar/: typeBar.js  (+1 more)
src/components/music_player/: musicPlayerEventHandler.js
src/components/skins/: skinEventHandler.js  skinRender.js
src/components/ui/: loading.js  paging.js  popup.js
src/css/: beatmappacks.css  beatmaps.css  bookmarks.css  downloads.css  loading.css  main.css  paging.css  popup.css  settings.css  skins.css  splashscreen.css
src/modules/: downloads.js  settings.js
src/modules/beatmaps/: beatmapPage.js  constants.js  state.js
src/modules/beatpacks/: beatpackPage.js  constants.js  state.js
src/modules/bookmarks/: bookmarks.js  state.js
src/modules/main/: mainPage.js  state.js
src/modules/skins/: constants.js  skinPage.js  state.js
(+7 files in other folders)
