[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.0", features = [ "unstable"] }
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-deep-link = "2.0.0"
reqwest = {version = "0.12.7", features = ["stream", "json", "cookies"] }
futures-util = "0.3.30"
zip = "2.2.0"
sevenz-rust = "0.6.1"
rspotify = { version = "0.14.0", features = ["env-file"] }
url = "2.5"
tauri-plugin-store = "2.2.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
scraper = "0.23.1"
open = "5.3.2"
tauri-plugin-dialog = "2"
#rodio = "0.20.1"
#chrono = "0.4.40"
#rand = "0.9"
#symphonia = "0.5.4"
